--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
     "@angular/router": "^19.1.5",
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
     "@popperjs/core": "^2.11.8",
+    "body-parser": "^1.20.3",
     "bootstrap": "^5.3.3",
     "boxicons": "^2.1.4",
+    "express": "^4.21.2",
+    "mongoose": "^8.10.0",
+    "morgan": "^1.10.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -31,6 +35,7 @@
     "@angular/cli": "~19.1.6",
     "@angular/compiler-cli": "^19.1.5",
     "@angular/localize": "^19.1.5",
+    "@types/express": "^5.0.0",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
