--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.20.3",
     "bootstrap": "^5.3.3",
     "boxicons": "^2.1.4",
+    "cookie-parser": "^1.4.7",
     "express": "^4.21.2",
     "mongoose": "^8.10.0",
     "morgan": "^1.10.0",
